<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefs_title_category_one" >
        <de.justus.schulinfo.UrlPreference
            android:dialogTitle="@string/url_dialog_title"
            android:key="url"
            android:summary="@string/url_small"
            android:title="@string/url_title" />

        <EditTextPreference
            android:dialogTitle="@string/pw_dialog_title"
            android:key="password"
            android:summary="@string/pw_small"
            android:title="@string/pw_title" />

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:dialogTitle="@string/class_title"
            android:entries="@array/class_entries"
            android:entryValues="@array/class_entries"
            android:key="class_select"
            android:summary="@string/class_small"
            android:title="@string/class_title" />

        <CheckBoxPreference 
            android:defaultValue="false"
            android:key="debug"
            android:summary="@string/debug_summary"
            android:title="@string/debug_title"/>
    </PreferenceCategory>

</PreferenceScreen>